# benchmark

./: .gitignore  README.md  benchmark-0.1.0-py3-none-any.whl  requirements.txt  setup.cfg
src/ollamabench/: benchmark_runner.py  benchmark_tasks.py  ollama_manager.py  submission_client.py  sys_info.py  version_checker.py
src/ollamabenchmark/: benchmark_runner.py  ollama_manager.py  submission_client.py  sys_info.py
src/ollamabenchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
