[metadata]
name = ollamabenchmark
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A benchmark tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/benchmark
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
install_requires =
    ollama
    psutil
    requests
    wmi; platform_system=="Windows"
    pynvml; platform_system=="Windows" or platform_system=="Linux"

[options.packages.find]
where = src
